[gd_scene load_steps=18 format=3 uid="uid://cbd6r0dnoyc1o"]

[ext_resource type="Script" uid="uid://bwa2sfb17otnu" path="res://src/scripts/main.gd" id="1_eewff"]
[ext_resource type="Texture2D" uid="uid://dhua5oq81jfek" path="res://src/assets/fondo del menu.png" id="2_5q4o7"]
[ext_resource type="Texture2D" uid="uid://b3tm3rc3qkodp" path="res://src/assets/asset de iu.png" id="3_3cfgd"]
[ext_resource type="FontFile" uid="uid://860eh15aohw" path="res://src/assets/Schoolbell-Regular.ttf" id="3_fyndt"]

[sub_resource type="LabelSettings" id="LabelSettings_gh0ne"]
font = ExtResource("3_fyndt")
font_size = 150
font_color = Color(0.8525283, 0.20611125, 0.64167756, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fyndt"]
texture = ExtResource("3_3cfgd")
region_rect = Rect2(768.4654, 79.15577, 520.3193, 183.90222)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rlaii"]
texture = ExtResource("3_3cfgd")
region_rect = Rect2(772.2, 320.2, 521.4001, 182.60773)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kmhfv"]
texture = ExtResource("3_3cfgd")
region_rect = Rect2(775.5271, 545.62036, 524.7455, 186.42273)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5q4o7"]
texture = ExtResource("3_3cfgd")
region_rect = Rect2(768.9953, 82.57431, 522.6108, 182.97043)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5mrjc"]
texture = ExtResource("3_3cfgd")
region_rect = Rect2(771.9092, 322.9364, 522.09595, 182.97046)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3cfgd"]
texture = ExtResource("3_3cfgd")
region_rect = Rect2(769.10565, 546.1518, 528.1805, 186.38666)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kf8lf"]
texture = ExtResource("3_3cfgd")
region_rect = Rect2(768.5558, 80.22035, 527.2562, 178.89049)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mgm53"]
texture = ExtResource("3_3cfgd")
region_rect = Rect2(771.6942, 325.01788, 524.1178, 172.61362)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uewes"]
texture = ExtResource("3_3cfgd")
region_rect = Rect2(768.5558, 550.98486, 527.2562, 178.8905)

[sub_resource type="Animation" id="Animation_3cfgd"]
length = 0.001

[sub_resource type="Animation" id="Animation_fyndt"]
resource_name = "fondito"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FondoDelMenu2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.98, 7.99),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kmhfv"]
_data = {
&"RESET": SubResource("Animation_3cfgd"),
&"fondito": SubResource("Animation_fyndt")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_eewff")

[node name="FondoDelMenu" type="Sprite2D" parent="."]
position = Vector2(577.5, 325.50003)
scale = Vector2(0.5973958, 0.6009259)
texture = ExtResource("2_5q4o7")

[node name="FondoDelMenu2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(577.49994, 324.74997)
scale = Vector2(0.59947926, 0.6050926)
texture = ExtResource("2_5q4o7")
flip_h = true

[node name="Hud" type="Node2D" parent="."]

[node name="UX" type="Node2D" parent="."]

[node name="Titulo" type="Label" parent="UX"]
offset_left = 375.0
offset_top = 17.0
offset_right = 754.0
offset_bottom = 230.0
text = "00:30"
label_settings = SubResource("LabelSettings_gh0ne")

[node name="play" type="Button" parent="UX"]
offset_left = 420.0
offset_top = 251.0
offset_right = 703.0
offset_bottom = 352.0
theme_override_colors/font_color = Color(0.8745098, 0.039215688, 0.8745098, 1)
theme_override_fonts/font = ExtResource("3_fyndt")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxTexture_fyndt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_rlaii")
theme_override_styles/hover = SubResource("StyleBoxTexture_kmhfv")
text = "Jugar"

[node name="quit" type="Button" parent="UX"]
offset_left = 419.0
offset_top = 493.0
offset_right = 706.0
offset_bottom = 590.0
theme_override_colors/font_color = Color(0.8745098, 0.09019608, 0.8745098, 1)
theme_override_fonts/font = ExtResource("3_fyndt")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxTexture_5q4o7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5mrjc")
theme_override_styles/hover = SubResource("StyleBoxTexture_3cfgd")
text = "Salir
"

[node name="credits" type="Button" parent="UX"]
offset_left = 421.0
offset_top = 376.0
offset_right = 696.0
offset_bottom = 473.0
theme_override_colors/font_color = Color(0.8745098, 0.078431375, 0.8745098, 1)
theme_override_fonts/font = ExtResource("3_fyndt")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxTexture_kf8lf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mgm53")
theme_override_styles/hover = SubResource("StyleBoxTexture_uewes")
text = "Cr√©ditos"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kmhfv")
}

[connection signal="pressed" from="UX/play" to="." method="_on_play_pressed"]
[connection signal="button_up" from="UX/quit" to="." method="_on_quit_button_up"]
[connection signal="pressed" from="UX/credits" to="." method="_on_credits_pressed"]
